Update to team header

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <!--
           <li><a href="#portfolio">Portfolio</a></li>
         -->
-          <li><a href="#Advisors">Team</a></li>
+          <li><a href="#team">Team</a></li>
           <!--
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -249,7 +249,7 @@
 
                 <p class="fst-italic">Drug discovery has come a long way with the help of Artificial Intelligence. QClairvoyance aims at harnessing the advancement and push its potential to the best limits by integrating AI with Quantum Computing. With this integration, researchers can analyze vast biological and chemical datasets, thereby improving - 
 
-                </p>
+                </p>s
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
