--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
               <div class="tab-pane fade" id="about-tab2">
 
-                <p class="fst-italic">CQuantum Molecular Modeling involved the use of quantum mechanics to predict molecular behavior and properties at the quantum level with extreme accuracy. QClairvoyance is leveraging the current-gen computational quantum chemistry techniques and software to solve the problems tackled using computer aided drug discovery. The aim is accurate simulation of molecular structures, dynamics, and interactions. 
+                <p class="fst-italic">Quantum Molecular Modeling involved the use of quantum mechanics to predict molecular behavior and properties at the quantum level with extreme accuracy. QClairvoyance is leveraging the current-gen computational quantum chemistry techniques and software to solve the problems tackled using computer aided drug discovery. The aim is accurate simulation of molecular structures, dynamics, and interactions. 
                   We aim to leverage the current QM/MM techniques to provide better solutions to – 
                 </p>
 
