Change to default png

--- a/index.html
+++ b/index.html
@@ -721,6 +721,20 @@ Current-Gen Infrastructure
               </div>
             </div>
           </div><!-- End Team Member -->
+          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="500"></div>
+            <div class="member">
+              <img src="assets\img\deafault.png class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Yamuna Chelluri</h4>
+                  <span>AI/ML Intern</span>
+                  <div class="social">
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
     
         </div>
     
