--- a/index.html
+++ b/index.html
@@ -656,11 +656,11 @@ Current-Gen Infrastructure
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p></p>
       </div><!-- End Section Title -->
       <div class="container">
     
-        <div class="row gy-4">
+        <div class="row gy-4 justify-content-center">
     
           <div class="col-lg-3 col-md-6 justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
@@ -714,20 +714,6 @@ Current-Gen Infrastructure
                 <div class="member-info-content">
                   <h4>Vikas Ghevade</h4>
                   <span>Quantum Analyst</span>
-                  <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="500"></div>
-            <div class="member">
-              <img src="assets\img\deafault.png class="img-fluid" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4>Yamuna Chelluri</h4>
-                  <span>AI/ML Intern</span>
                   <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
